flux/auth/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: app-msc-dipterv-dev-auth
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: http
