flux/auth/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
spec:
  rules:
  - host: auth.dipterv.msc.nemes.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 5000
